- Fixed a bug causing previewposts to not be shown inside secondary subject page.
- Fixed a bug of post previews not opening when clicked.
- Fixed a bug that was showing any time under a hour as less then a minute ago instead of x minutes.
- Fixed a bug preventing posts that had quotation marks in the post and in their secondary subject to be edited or deleted.
- Fixed a bug causing new secondary subjects to be added under the approver its name instead of the primary suspect.

+ 

- All alerts now have the Roboto font
- Fixed a bug causing the background to not expand with the page
- Header is now implemented using MVC

+ 

- Fixed username not being capslock sensitive
- Usernames can now have a maximum length of 20 chars
- Fixed a bug where when a admin logged out the system would still recognize the user as a admin
- Fixed a bug where logging in sometimes didnt remove the login box.

+ 

- Alerts called using the callController now dissapear after 5 seconds
- Fixed a bug giving the wrong view on postPage
- Started working on the account page
- All references of a username now link to the account page of that username.

+

- Fixed some minor bugs
- A very basic account page is now done.

+

- Fixed alerts not beign properly centered.
- Made all documentation under the View folder up to standard.

+

- Some minor changes in how the size respons to resizing of the browser.
- Added a contact page
- Started working on the about us page.

+ 

- Finished a basic about us page.
- Made all function and class documentation under the Model folder up to standard.
- Made all function and class documentation under the Controller folder up to standard.
- All css is now in a single file to decrease amount of request being made loading it.
- Removed Footer since i had no use for it.

+

- Added a credit system
- Users currently gain 10 credits when making a post
- Credit is also shown on account page.
- Added icons to the account page

+ 
