@@ -1,10 +1,10 @@
 <?php  
-/* Will check if the user is logged in or not */
+/* Will check if the user is logged in or not and if the user is admin or not */
 
 session_start();
 
-// Resonse loginButtonsAction is show on default. will be put on hide if user is logged in already
-$response = ["loginButtonsAction" => "show"];
+
+$response = ["loggedIn" => false, "isAdmin" => false];
 
 // Checking if the loggedIn session variable is set
 if (isset($_SESSION["loggedIn"]))
@@ -12,7 +12,13 @@ if (isset($_SESSION["loggedIn"]))
 	// checking if it is set to true
     if ($_SESSION["loggedIn"] == true) 
     {
-        $response["loginButtonsAction"] = "hide";
+        $response["loggedIn"] = true;
+
+        //logDebug("session isadmin: " . var_export($_SESSION['isAdmin'],true));
+        if ($_SESSION["isAdmin"] == true) 
+        {
+            $response["isAdmin"] = true;
+        }
     }
 }
 
