@@ -26,9 +26,9 @@ class LoginView extends View
 		<img src='" . $cancelImgPath . "' class='cancelImage'></img>
 		</button>
 		<form class='loginForm' onsubmit='callControllerFromForm(\"body\", \"loginController\", \"loginForm\"); return false;' method='POST'>
-		<label for='text'>Username: </label>
+		<label for='text'><i class='fas fa-user-tie'></i> Username: </label>
 		<input type='text' name='username' minlength='2' maxlength='30' required>
-		<label for='password'>Password: </label>
+		<label for='password'><i class='fas fa-key'></i> Password: </label>
 		<input type='password' name='password' minlength='2' maxlength='30' required>
 		<br/>
 		<input class='submitButton button' type='submit' value='Log in'>
