@@ -25,11 +25,11 @@ class RegisterView extends View
 		<img src='" . $cancelImgPath . "' class='cancelImage'></img>
 		</button>
 		<form class='loginForm' onsubmit='callControllerFromForm(\"body\", \"registerController\", \"loginForm\"); return false;' method='POST'>
-		<label for='text'>Username: </label>
+		<label for='text'><i class='fas fa-user-tie'></i> Username: </label>
 		<input type='text' name='username' minlength='2' maxlength='20' required>
-		<label for='password'>Password: </label>
+		<label for='password'><i class='fas fa-key'></i> Password: </label>
 		<input type='password' name='password' minlength='2' maxlength='100' required>
-		<label class='confirmPassword' for='confirmPassword'>Confirm password</label>
+		<label class='confirmPassword' for='confirmPassword'><i class='fas fa-key'></i> Confirm password</label>
 		<input class='confirmPassword' type='password' name='confirmPassword' minlength='2' maxlength='30' required/>
 		<br/>
 		<input class='submitButton button' type='submit' value='Sign up'>
